kube/papaya.yaml
#
# Copyright IBM Corp. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papaya
spec:
  replicas: 1
  selector:
    matchLabels:
      app: papaya
  template:
    metadata:
      labels:
        app: papaya
    spec:
      containers:
        - name: main
          image: library/papaya:1.0
          imagePullPolicy: IfNotPresent
          workingDir: /var/app/
#          tty: true
#          stdin: true
          ports:
            - containerPort: 8080
#          ports:
#            - containerPort: 9443
          volumeMounts:
            - name: papaya-volume
              mountPath: /var/app/data
      volumes:
        - name: papaya-volume
          persistentVolumeClaim:
            claimName: papaya-pvc
#        - name: tls-cert-volume
#          secret:
#            secretName: papaya-tls-cert

---
apiVersion: v1
kind: Service
metadata:
  name: papaya-svc
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080  
#    - name: https
#      port: 443
#      protocol: TCP
#      targetPort: 9443  
  selector:
    app: papaya
    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    app: papaya
  name: papaya
spec:
  tls:
    - hosts:
        - papaya.foo.com
      secretName: papaya-tls-cert
  ingressClassName: nginx
  rules:
    - host: papaya.foo.com
      http:
        paths:
          - path: /papaya
            pathType: Prefix
            backend:
              service:
                name: papaya-svc
                port:
                  name: http
